<resources>


    <string name="app_name">Sukudo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="game_title">数独游戏</string>
    <string name="begin_text">START</string>
    <string name="continue_text">CONTINUE</string>
    <string name="about_text">ABOUT GAME</string>
    <string name="exit_text">QUIT</string>
    <string name="about_content">游戏简介，数独游戏在9*9的方格内进行，分为3*3的小方格，每一横排每一竖排每一斜排都是1-9九个数字。每一横排每一竖排每一斜排不得重复任何一个数字.</string>

</resources>
