<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/sd"
    android:orientation="vertical"
    android:padding="30dip"
    tools:context="com.zhbit.hhh.MainActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/game_title"
        android:layout_weight="0.12"
        android:textColor="#000"
        android:textSize="15pt"/>

    <Button
        android:id="@+id/beginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/begin_text"
        android:textSize="7pt"
        android:textStyle="bold"
        android:textColor="#8B2500"
        android:layout_weight="0.05">
    </Button>

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_text"
        android:textSize="7pt"
        android:textStyle="bold"
        android:textColor="#8B2500"
        android:layout_weight="0.05">
    </Button>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/continue_text"
        android:textSize="7pt"
        android:textStyle="bold"
        android:textColor="#8B2500"
        android:layout_weight="0.05">
    </Button>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/exit_text"
        android:textSize="7pt"
        android:textStyle="bold"
        android:textColor="#8B2500"
        android:layout_weight="0.05">
    </Button>

</LinearLayout>
